--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,7 +14,8 @@
   </head>
 
   <body class="<%= page_classes %>">
+  <%= partial "header" %> 
     <%= yield %>
-    <%= partial "footer" %>  
+    <%= partial "footer" %>
   </body>
 </html>
