--- a/source/about_contact.html.erb
+++ b/source/about_contact.html.erb
@@ -1,3 +1,9 @@
 ---
 title: About/Contact
 ---
+<p>Hi! I'm Janice Bonham West. You've found my professional website where I share
+projects I recently completed at the Ruby on Rails bootcamp of The Iron Yard
+Academy in Durham, NC. When I'm not coding, I enjoy spending time with my family,
+participating in water sports of all kinds, hiking, and listening to live music.
+<p>
+If you'd like to learn more about my professional history and qualifications, please visit my <%= link_to 'my LinkedIn site.', 'http://www.linkedin.com/pub/janice-bonham-west/a/46/744/' %>
