--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -2,7 +2,7 @@
 
 body {
   /*background: #d4d4d4 url("../images/background.png");*/
-  text-align: center;
+  text-align: left;
   font-family: sans-serif; }
 
 h1 {
