Reworked the personal website

--- a/source/_header.erb
+++ b/source/_header.erb
@@ -1,5 +1,8 @@
-<header align="left">
-  <h1>Janice Bonham West</h1>
-  <h2>Junior Software Developer</h2>
-  <hr width="100%" />
+<header id="header" align="center">
+      <img src="/images/JaniceHeadShot.png" width="80px" height="80px" style="padding-top: 30px"/>
+    <div style="display: inline; position: relative; top: -70px; left: 100px; ">
+      <h1>Janice Bonham West</h1>
+      <h3>Software Development Student at  <a href="http://theironyard.com">The Iron Yard</a>
+        in <a href="www.durham-nc.com/">Durham, NC</a></h3>
+    </div>
 </header>
