--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -1,3 +1,9 @@
-<footer>
-  Copyright 2014 Janice Bonham West
+<footer id="footer" style="padding: 0 20px 0 40px; float: none;">
+  <p>
+  <a href="http://jigsaw.w3.org/css-validator/check/referer">
+      <img style="border:0;width:44px;height:15px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss"
+        alt="Valid CSS!" />
+  </a>
+Copyright 2014 Janice Bonham West
 </footer>
