--- a/source/about_contact.html.erb
+++ b/source/about_contact.html.erb
@@ -2,8 +2,13 @@
 title: About/Contact
 ---
 <p>Hi! I'm Janice Bonham West. You've found my professional website where I share
-projects I recently completed at the Ruby on Rails bootcamp of The Iron Yard
+projects I've recently completed at the Ruby on Rails bootcamp of The Iron Yard
 Academy in Durham, NC. When I'm not coding, I enjoy spending time with my family,
 participating in water sports of all kinds, hiking, and listening to live music.
 <p>
 If you'd like to learn more about my professional history and qualifications, please visit my <%= link_to 'my LinkedIn site.', 'http://www.linkedin.com/pub/janice-bonham-west/a/46/744/' %>
+<ul style="padding: 0 0 0 40px;" >
+<li class="bar_item"><a href="/blog_interests.html">Blog/Interests</a></li>
+<li class="bar_item"><a href="/">Back to Home</a></li>
+<li class="bar_item"><a href="/homework_portfolio.html">Homework Project Portfolio</a></li>
+</ul>
