--- a/source/blog_interests.html.erb
+++ b/source/blog_interests.html.erb
@@ -5,8 +5,13 @@ title: Blog/Interests
 In future, this page will be replaced by a github repo so the middleman-blog
 template can be implemented.  -->
 
-<h1>Monday, June 17, 2014</h1>
+<h1 style="padding: 10px 0 0 40px;">Monday, June 17, 2014</h1>
   <p>Summer is truly here. While I'm in this intensive learning program I have been
     spending less time outside, so I was delighted to see my backyard was filled with
     fireflies when I went out with the dog tonight! Summer is my favorite time of year.</p>
-  <img src="/images/fireflies_in_yard.jpg" />   
+  <img style="padding: 10px 0 0 40px;" src="/images/fireflies_in_yard.jpg" />
+  <ul style="padding: 0 0 0 40px;" >
+  <li class="bar_item"><a href="/about_contact.html">About/Contact</a></li>
+  <li class="bar_item"><a href="/">Back to Home</a></li>
+  <li class="bar_item"><a href="/homework_portfolio.html">Homework Project Portfolio</a></li>
+  </ul>
