--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,15 +7,18 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
-
-    <%= stylesheet_link_tag "normalize", "all" %>
+    <title><%= current_page.data.title || "Janice Bonham West" %></title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag "ambiance" %>
     <%= javascript_include_tag  "all" %>
   </head>
 
   <body class="<%= page_classes %>">
-  <%= partial "header" %> 
+  <%= partial "header" %>
     <%= yield %>
     <%= partial "footer" %>
   </body>
 </html>
+
+<!-- add this as background to the header of the webpage
+<iframe src="http://www.flickriver.com/photos/cubagallery/4678170430/?embedded=1" width="280" height="280" style="border: 1px solid #666;"></iframe> -->
